<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/board_topic_action_favorite"
      android:orderInCategory="8"
      android:title="@string/board_topic_action_favorite"
      android:icon="@drawable/ic_menu_favorite"
      app:showAsAction="never"/>
  <item
      android:id="@+id/board_topic_action_newpost"
      android:orderInCategory="1"
      android:title="@string/board_topic_action_newpost"
      android:icon="@drawable/ic_note_add_white_24dp"
      app:showAsAction="always"/>
  <item
      android:id="@+id/board_topic_action_search"
      android:orderInCategory="2"
      android:title="@string/board_topic_action_search"
      android:icon="@drawable/ic_search_white_24dp"
      app:showAsAction="always"/>

  <item
      android:id="@+id/mode_2"
      android:orderInCategory="3"
      android:title="同主题，回复时间"
      android:checkable="true"
      android:checked ="true"
      app:showAsAction="never"/>
  <item
      android:id="@+id/mode_1"
      android:orderInCategory="4"
      android:title="同主题，发表时间"
      android:checkable="true"
      android:checked ="false"
      app:showAsAction="never"/>
  <item
      android:id="@+id/mode_0"
      android:orderInCategory="5"
      android:title="普通模式"
      android:checkable="true"
      android:checked ="false"
      app:showAsAction="never"/>

  <item
      android:id="@+id/board_topic_action_sticky"
      android:orderInCategory="6"
      android:title="@string/board_topic_action_sticky"
      app:showAsAction="never"/>
  <item
      android:id="@+id/board_topic_action_refresh"
      android:orderInCategory="7"
      android:title="@string/board_topic_action_refresh"
      android:icon="@drawable/ic_refresh_white_24dp"
      android:visible="false"
      app:showAsAction="never"/>

</menu>