<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/mail_content_copy"
      android:orderInCategory="1"
      android:title="@string/mail_content_menu_copy"
      android:icon="@drawable/ic_content_copy_white_48dp"
      app:showAsAction="always"/>

  <item
      android:id="@+id/mail_content_reply"
      android:orderInCategory="1"
      android:title="@string/mail_content_menu_reply"
      android:icon="@drawable/ic_reply_white_36dp"
      app:showAsAction="always"/>

  <item
      android:id="@+id/mail_content_open_post"
      android:orderInCategory="1"
      android:title="@string/mail_content_menu_open_post"
      android:icon="@drawable/ic_launch_white_24dp"
      app:showAsAction="always"/>
</menu>