<ScrollView android:id="@+id/image_info_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/body_background_night"
    >

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <TextView
        android:id="@+id/ii_basic_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/image_info_basic"
        android:textColor="@color/blue_text_night"
        android:textSize="@dimen/zsmth_font_size_large"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

        <TextView
            android:id="@+id/ii_filename_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/image_info_filename"
            android:textColor="@color/status_text_night"
            />

        <TextView
            android:id="@+id/ii_filename"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:ellipsize="middle"
            android:singleLine="true"
            android:textColor="@color/status_text_night"
            />
      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

        <TextView
            android:id="@+id/ii_datetime_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_info_datetime"
            android:textColor="@color/status_text_night"
            />

        <TextView
            android:id="@+id/ii_datetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/status_text_night"
            />
      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

        <TextView
            android:id="@+id/ii_width_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_info_width"
            android:textColor="@color/status_text_night"
            />

        <TextView
            android:id="@+id/ii_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/status_text_night"
            />
      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

        <TextView
            android:id="@+id/ii_height_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_info_height"
            android:textColor="@color/status_text_night"
            />

        <TextView
            android:id="@+id/ii_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/status_text_night"
            />
      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

        <TextView
            android:id="@+id/ii_size_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_info_size"
            android:textColor="@color/status_text_night"
            />

        <TextView
            android:id="@+id/ii_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/status_text_night"
            />
      </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/ii_capture_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/image_info_capture"
        android:textColor="@color/blue_text_night"
        android:textSize="@dimen/zsmth_font_size_large"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

        <TextView
            android:id="@+id/ii_make_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_info_make"
            android:textColor="@color/status_text_night"
            />

        <TextView
            android:id="@+id/ii_make"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textColor="@color/status_text_night"
            />

      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

        <TextView
            android:id="@+id/ii_model_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_info_model"
            android:textColor="@color/status_text_night"
            />

        <TextView
            android:id="@+id/ii_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textColor="@color/status_text_night"
            />
      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

        <TextView
            android:id="@+id/ii_focal_length_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_info_focal_length"
            android:textColor="@color/status_text_night"
            />

        <TextView
            android:id="@+id/ii_focal_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/status_text_night"
            />
      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

        <TextView
            android:id="@+id/ii_aperture_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_info_aperture"
            android:textColor="@color/status_text_night"
            />

        <TextView
            android:id="@+id/ii_aperture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/status_text_night"
            />
      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

        <TextView
            android:id="@+id/ii_exposure_time_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/image_info_exposure_time"
            android:textColor="@color/status_text_night"
            />

        <TextView
            android:id="@+id/ii_exposure_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/status_text_night"
            />
      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

        <TextView
            android:id="@+id/ii_flash_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_info_flash"
            android:textColor="@color/status_text_night"
            />

        <TextView
            android:id="@+id/ii_flash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textColor="@color/status_text_night"
            />
      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

        <TextView
            android:id="@+id/ii_iso_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_info_iso"
            android:textColor="@color/status_text_night"
            />

        <TextView
            android:id="@+id/ii_iso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/status_text_night"
            />
      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginBottom="10dp"
          >

        <TextView
            android:id="@+id/ii_white_balance_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_info_white_balance"
            android:textColor="@color/status_text_night"
            />

        <TextView
            android:id="@+id/ii_white_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/status_text_night"
            />
      </TableRow>

    </TableLayout>

  </LinearLayout>

</ScrollView>