<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    >
  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerview_mail_contents"
      android:name="com.zfdang.zsmth_android.MailFragment"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_above="@+id/mail_bottom_buttons"
      android:layout_marginLeft="0dp"
      android:layout_marginRight="0dp"
      android:layout_marginBottom="3dp"
      app:layoutManager="LinearLayoutManager"
      tools:context=".MailListFragment"
      tools:listitem="@layout/mail_item" />
  <LinearLayout
      android:id="@+id/mail_bottom_buttons"
      android:layout_alignParentBottom="true"
      android:layout_width="match_parent"
      android:layout_height="35dp"

      android:orientation="horizontal">

    <Button
        android:id="@+id/mail_button_inbox"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/mail_folder_button_background"
        android:gravity="center"
        android:text="@string/mail_button_inbox_label"
        android:textColor="@color/status_text_night"
        android:textSize="@dimen/zsmth_font_size_small" />

    <Button
        android:id="@+id/mail_button_outbox"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/mail_folder_button_background"
        android:gravity="center"
        android:text="@string/mail_button_outbox_label"
        android:textColor="@color/status_text_night"
        android:textSize="@dimen/zsmth_font_size_small" />

    <Button
        android:id="@+id/mail_button_trashbox"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/mail_folder_button_background"
        android:gravity="center"
        android:text="@string/mail_button_trashbox_label"
        android:textColor="@color/status_text_night"
        android:textSize="@dimen/zsmth_font_size_small" />

    <Button
        android:id="@+id/mail_button_at"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/mail_folder_button_background"
        android:gravity="center"
        android:text="@string/mail_button_at_label"
        android:textColor="@color/status_text_night"
        android:textSize="@dimen/zsmth_font_size_small" />

    <Button
        android:id="@+id/mail_button_reply"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/mail_folder_button_background"
        android:gravity="center"
        android:text="@string/mail_button_reply_label"
        android:textColor="@color/status_text_night"
        android:textSize="@dimen/zsmth_font_size_small" />

    <Button
        android:id="@+id/mail_button_like"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/mail_folder_button_background"
        android:gravity="center"
        android:text="@string/mail_button_like_label"
        android:textColor="@color/status_text_night"
        android:textSize="@dimen/zsmth_font_size_small" />


  </LinearLayout>


</RelativeLayout>