<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="42dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="0dp"
    >

  <!-- 防止默认焦点为edittext -->
  <Button
      android:id="@+id/post_list_first_page"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginBottom="5dp"
      android:layout_marginLeft="2dp"
      android:layout_marginRight="2dp"
      android:layout_marginTop="5dp"
      android:layout_weight="2"
      android:background="@drawable/navigation_button_background"
      android:text="@string/first_page"
      android:textColor="@color/status_text_night"
      android:textSize="@dimen/zsmth_font_size_extra_small"
      />

  <Button
      android:id="@+id/post_list_pre_page"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginBottom="5dp"
      android:layout_marginLeft="2dp"
      android:layout_marginRight="2dp"
      android:layout_marginTop="5dp"
      android:layout_weight="2"
      android:background="@drawable/navigation_button_background"
      android:text="@string/pre_page"
      android:textColor="@color/status_text_night"
      android:textSize="@dimen/zsmth_font_size_extra_small"
      />

  <Button
      android:id="@+id/post_list_next_page"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginBottom="5dp"
      android:layout_marginLeft="2dp"
      android:layout_marginRight="2dp"
      android:layout_marginTop="5dp"
      android:layout_weight="2"
      android:background="@drawable/navigation_button_background"
      android:text="@string/next_page"
      android:textColor="@color/status_text_night"
      android:textSize="@dimen/zsmth_font_size_extra_small"
      />

  <Button
      android:id="@+id/post_list_last_page"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginBottom="5dp"
      android:layout_marginLeft="2dp"
      android:layout_marginRight="2dp"
      android:layout_marginTop="5dp"
      android:layout_weight="2"
      android:background="@drawable/navigation_button_background"
      android:padding="5dp"
      android:text="@string/last_page"
      android:textColor="@color/status_text_night"
      android:textSize="@dimen/zsmth_font_size_extra_small"
      />

  <EditText
      android:id="@+id/post_list_page_no"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="0dp"
      android:layout_weight="1"
      android:gravity="center_horizontal"
      android:inputType="number"
      android:selectAllOnFocus="true"
      android:singleLine="true"
      android:text="1"
      android:textColor="@color/status_text_night"
      />

  <Button
      android:id="@+id/post_list_go_page"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginBottom="5dp"
      android:layout_marginLeft="2dp"
      android:layout_marginRight="2dp"
      android:layout_marginTop="5dp"
      android:layout_weight="2"
      android:background="@drawable/navigation_button_background"
      android:text="@string/go_page"
      android:textColor="@color/status_text_night"
      android:textSize="@dimen/zsmth_font_size_extra_small"
      />
</LinearLayout>
